--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Psychic-Game</title>
+    
 </head>
 <body>
-    
+
+<div>
+    <h1>Psychic Word Game</h1>
+    <p id="directions-text">Guess which letter I am thinking of! (start by pressing a letter on your keyboard)</p>
+    <p id="wins-text"></p>
+    <p id="losses-text"></p>
+    <p id="guesses-left"></p>
+    <p id="guessed-list"></p>
+</div>
+<script src="assets/javascript/game.js"></script>
 </body>
 </html>
